fix: h3 spacing and media queries

--- a/src/components/ColorTokenTable/color-token-table.scss
+++ b/src/components/ColorTokenTable/color-token-table.scss
@@ -3,18 +3,20 @@
   flex-direction: column;
 }
 
+.color-token-table .page-h3:first-of-type {
+  margin-top: 3rem;
+}
+
 .color-token-table__theme-switcher {
   position: relative;
   width: 100%;
   height: 3rem;
-  margin-bottom: 1.75rem;
   background: $ui-02;
 
-  @media all and (max-width: 1055px) {
+  @include carbon--breakpoint-down('lg') {
     margin-left: 0;
   }
-
-  @media all and (max-width: 671px) {
+  @include carbon--breakpoint-down('md') {
     max-width: calc(100% - 16px);
     margin-left: 0.5rem;
   }
